2007-09-27  daniel g. siegel  <dgsiegel@gmail.com>

	* ChangeLog,
	  www.gnome.org/projects/cheese/screenshots.html,
	  www.gnome.org/projects/cheese/data/images/preferences-desktop-wallpaper.png,
	  www.gnome.org/projects/cheese/data/images/internet-group-chat.png,
	  www.gnome.org/projects/cheese/data/images/system-users.png,
	  www.gnome.org/projects/cheese/data/images/video-x-generic.png,
	  www.gnome.org/projects/cheese/data/images/applications-development.png,
	  www.gnome.org/projects/cheese/data/images/preferences-desktop-assistive-technology.png,
	  www.gnome.org/projects/cheese/data/images/package-x-generic.png,
	  www.gnome.org/projects/cheese/data/themes/cheese,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/index.html:
	  new website for cheese

2007-09-28  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/svn.shtml:
	Update for stable 2.12.x branch.

2007-09-28  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/foot.shtml:
	Update the copyright notice in the footer.

2007-09-28  Matthew Barnes  <mbarnes@redhat.com>

	* www.gnome.org/projects/evolution/developer-docs:
	Refresh existing developer docs and add libedata-book docs.

2007-09-28  daniel g. siegel  <dgsiegel@gmail.com>

	* ChangeLog,
	  www.gnome.org/projects/cheese/appendix.shtml,
	  www.gnome.org/projects/cheese/faq.html,
	  www.gnome.org/projects/cheese/footer.tmp,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/index.shtml,
	  www.gnome.org/projects/cheese/index.tmp,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/screenshots.html,
	  www.gnome.org/projects/cheese/screenshots.tmp,
	  www.gnome.org/projects/cheese/update.sh: 
	  split the cheese webpage into a template file and the real