@@ -210,6 +210,11 @@
 
         <div id="bottomRight">
           <h2>News</h2>
+          <h3>October 1st 2007</h3>
+          <p>
+          new website! <a href="http://www.gnome.org/projects/cheese">http://www.gnome.org/projects/cheese</a>
+          </p>
+
           <h3>September 15th 2007</h3>
           <p>
           Cheese has moved to <a href="http://svn.gnome.org">svn.gnome.org</a>
