@@ -1,4 +1,11 @@
-2007-09-27  daniel g. siegel  <dgsiegel@gmail.com>
+2007-09-29  daniel g. siegel  <dgsiegel@gmail.com>
+
+	* ChangeLog,
+	  www.gnome.org/projects/cheese/index.html,
+	  www.gnome.org/projects/cheese/Makefile.am: 
+	  news entry: new website for cheese
+
+2007-09-29  daniel g. siegel  <dgsiegel@gmail.com>
 
 	* ChangeLog,
 	  www.gnome.org/projects/cheese/screenshots.html,
